<resources>
    <string name="app_name">PeliculasApp</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="rep_pass">Repetir Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="informacion">Información</string>
    <string name="sexoW">Mujer</string>
    <string name="sexoM">Hombre</string>
    <string name="name">Nombre</string>
    <string name="generoPeli">Seleccione su genero de peliculas favorito</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="select_city_prompt">Selecciona una ciudad</string>
    <string name="login">Login</string>
    <string-array name="colombian_cities">
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
    </string-array>
</resources>