<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/dimgray">

    <ImageView
        android:id="@+id/logo_peli_imageView"
        android:layout_width="143dp"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:src="@drawable/icono_pelicula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_peli_imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rep_pass_TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rep_pass_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rep_pass"
            android:inputType="textPassword"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rep_pass_TextInputLayout">

        <RadioButton
            android:id="@+id/radioButtonWomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sexoW"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButtonMen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexoM"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <!-- Primera fila de checkboxes -->
    <RadioGroup
        android:id="@+id/radioButtonMovies1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSex">

        <CheckBox
            android:id="@+id/checkbox_accion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acción" />

        <CheckBox
            android:id="@+id/checkbox_comedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comedia" />

        <CheckBox
            android:id="@+id/checkbox_drama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drama" />
    </RadioGroup>

    <!-- Segunda fila de checkboxes -->
    <RadioGroup
        android:id="@+id/radioButtonMovies2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMovies1">

        <CheckBox
            android:id="@+id/checkbox_ciencia_ficcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ciencia Ficción" />

        <CheckBox
            android:id="@+id/checkbox_animacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Animación" />

        <CheckBox
            android:id="@+id/checkbox_terror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terror" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/fechaNacimiento"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMovies2" />

    <Spinner
        android:id="@+id/spinner_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:entries="@array/colombian_cities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_date" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cities"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/info_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacion"
        android:textColor="@color/whitesmoke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>